--- a/src/views/dvr/dvr.ejs
+++ b/src/views/dvr/dvr.ejs
@@ -588,16 +588,16 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-hover" style="width:100%">
+                            <table class="table table-hover">
                                 <thead class="table-dark">
                                     <tr>
                                         <th width="50px">ID</th>
-                                        <th>Dispositivo</th>
-                                        <th>IP / MAC / Serial</th>
-                                        <th>Cámaras / Switch</th>
-                                        <th>Sede</th>
-                                        <th>Estado</th>
-                                        <th>Fecha Creación</th>
+                                        <th style="text-align: center;">Dispositivo</th>
+                                        <th style="text-align: center;">IP / MAC / Serial</th>
+                                        <th style="text-align: center;">Cámaras / Switch</th>
+                                        <th style="text-align: center;">Sede</th>
+                                        <th style="text-align: center;">Estado</th>
+                                        <th style="text-align: center;">Fecha Creación</th>
                                         <th width="120px" class="text-center">Acciones</th>
                                     </tr>
                                 </thead>
@@ -1170,7 +1170,7 @@
                             </div>
                         </td>
                         <td>
-                            <div class="small">
+                            <div class="small text-center">
                                 <div><strong>IP:</strong> ${ipDisplay}</div>
                                 <div><strong>MAC:</strong> ${macDisplay}</div>
                                 <div><strong>Serial:</strong> ${serialDisplay}</div>
