--- a/src/views/mikrotik/mikrotik.ejs
+++ b/src/views/mikrotik/mikrotik.ejs
@@ -563,15 +563,15 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-hover" style="width:100%">
+                            <table class="table table-hover">
                                 <thead class="table-dark">
                                     <tr>
                                         <th width="50px">ID</th>
-                                        <th>Dispositivo</th>
-                                        <th>IP / Serial</th>
-                                        <th>Sede / Ubicación</th>
-                                        <th>Estado</th>
-                                        <th>Fecha Creación</th>
+                                        <th style="text-align: center;">Dispositivo</th>
+                                        <th style="text-align: center;">IP / Serial</th>
+                                        <th style="text-align: center;">Sede / Ubicación</th>
+                                        <th style="text-align: center;">Estado</th>
+                                        <th style="text-align: center;">Fecha Creación</th>
                                         <th width="120px" class="text-center">Acciones</th>
                                     </tr>
                                 </thead>
